# GhostStreaming

./: CMakeLists.txt  config.json  database.db
GhostStreamingClient/: AddUserWidget.cpp  AddUserWidget.h  AddUserWidget.ui  CMakeLists.txt  SplashScreen.cpp  SplashScreen.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newuserdialog.cpp  newuserdialog.h  newuserdialog.ui  selectuser.cpp  selectuser.h  servercommunication.cpp  servercommunication.h
add_media_app/: AddMedia.cpp  AddMedia.h  MetadataDatabase.cpp  VideoMetadata.h  main.cpp
database_manager/: DatabaseManager.cpp  DatabaseManager.h  MediaCollection.cpp  MediaCollection.h  MediaMetadata.cpp  MediaMetadata.h
streaming_app/: CMakeLists.txt  MetadataDB.cpp  MetadataDB.h  main.cpp
streaming_client/: StreamingClient.cpp  StreamingClient.h  main.cpp
streaming_server/: ClientManagement.cpp  ClientManagement.h  MetadataDB.cpp  MetadataDB.h  MetadataManagement.cpp  MetadataManagement.h  User.cpp  User.h  UserManagement.cpp  UserManagement.h  api_endpoint.cpp  api_endpoint.h  main.cpp
tests/collections/: collection.json
tests/collections/media/: 1x01.json  1x02.json
tests/movies/: thebatman.json
